# gbCPP-Memory

./: .gitignore  CMakeLists.txt
Lesson1/: CMakeLists.txt
Lesson1/include/: categorizer.hpp
Lesson1/src/: categorizer.cpp
Lesson2/: CMakeLists.txt
Lesson2/src/: main.cpp
Lesson3/: CMakeLists.txt
Lesson4/: CMakeLists.txt
